--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 body {
     color: white;
     text-align: center;
+    text-weight: bold;
     background: black;
     margin: 0px;
     font-family: "Chakra Petch", sans-serif;
@@ -9,10 +10,14 @@ body {
 }
 
 header {
-    border-bottom: solid 2px rgb(228, 45, 42);
+    background: rgb(65, 113, 225);
+    border-bottom: solid 2px rgba(16, 2, 2, 0);
+    text-weight: bold;
     padding: 20px;
     font-size: 32px;
-    color: rgb(228, 45, 42);
+    color: rgb(13, 7, 7);
+    border: solid 2px rgb(192, 202, 215);
+    border-bottom: solid 2px rgb(192, 202, 215);
 }
 
 .chamada {
@@ -59,4 +64,8 @@ p {
 
 .categoria h2 {
     color: rgb(42, 122, 228);
+}
+
+div {
+    margin-right: 20px;
 }
